# cmake_tutorials

basics/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp  make.bat
full_tutorial/1/: CMakeLists.txt  main.cpp  make.bat
full_tutorial/2/: CMakeLists.txt  main.cpp  make.bat  temp.txt
full_tutorial/2/Utility/: utility.cpp  utility.hpp
full_tutorial/3/: CMakeLists.txt  main.cpp  temp.txt
full_tutorial/3/Utility/: CMakeLists.txt
full_tutorial/4/: .gitignore  .gitmodules  CMakeLists.txt  build.bat  cmd.txt  configure.bat  main.cpp  run.bat
full_tutorial/4/Utility/: utility.cpp
